# substrate-template

./: README.md  README.md.liquid  cargo-generate.toml
node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
